test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/spaced-negative-infinity.widl
interface X {
    const float infinity = - Infinity;
};
